AC: rename structs to match spl conventions

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -9,6 +9,9 @@ members = [
   "token/program",
   "token/program-2022",
 ]
+exclude = [
+  "account-compression/"
+]
 
 [provider]
 cluster = "mainnet"
