--- a/account-compression/programs/wrapper/Cargo.toml
+++ b/account-compression/programs/wrapper/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "candy-wrapper"
+name = "wrapper"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "candy_wrapper"
+name = "wrapper"
 
 [features]
 no-entrypoint = []
@@ -17,4 +17,4 @@ default = []
 
 
 [dependencies]
-solana-program = "1.10.1"
+solana-program = "1.10.35"
