--- a/account-compression/Cargo.toml
+++ b/account-compression/Cargo.toml
@@ -1,8 +1,5 @@
 [workspace]
 members = [
-    "programs/gummyroll",
-    "programs/bubblegum",
-    "programs/gumball-machine",
-    "programs/sugar-shack",
-    "programs/candy-wrapper"
+    "programs/compression",
+    "programs/wrapper"
 ]
