--- a/account-compression/programs/spl-compression/Cargo.toml
+++ b/account-compression/programs/spl-compression/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "gummyroll"
+name = "spl-compression"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2018"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "gummyroll"
+name = "spl_compression"
 
 [features]
 no-entrypoint = []
