gov: add shank annotations for accounts

--- a/governance/program/Cargo.toml
+++ b/governance/program/Cargo.toml
@@ -20,6 +20,7 @@ num-traits = "0.2"
 serde = "1.0.130"
 serde_derive = "1.0.103"
 solana-program = "1.11.6"
+shank = { version = "~0.0.9" }
 spl-token = { version = "3.5", path = "../../token/program", features = [ "no-entrypoint" ] }
 spl-governance-tools= { version = "0.1.2", path ="../tools"}
 spl-governance-addin-api= { version = "0.1.2", path ="../addin-api"}
