--- a/token/js/.gitignore
+++ b/token/js/.gitignore
@@ -1,2 +1,14 @@
-lib
+.idea
+.vscode
+.DS_Store
+
+node_modules
+
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
+
 docs
+lib
+test-ledger
+*.tsbuildinfo
