--- a/token/js/package.json
+++ b/token/js/package.json
@@ -1,11 +1,14 @@
 {
     "name": "@solana/spl-token",
-    "version": "0.3.1",
+    "description": "SPL Token Program JS API",
+    "version": "0.3.2",
     "author": "Solana Maintainers <maintainers@solana.foundation>",
     "repository": "https://github.com/solana-labs/solana-program-library",
     "license": "Apache-2.0",
-    "publishConfig": {
-        "access": "public"
+    "type": "module",
+    "sideEffects": false,
+    "engines": {
+        "node": ">=16"
     },
     "files": [
         "lib",
@@ -13,62 +16,71 @@
         "LICENSE",
         "README.md"
     ],
-    "type": "module",
-    "sideEffects": false,
-    "main": "lib/cjs/index.js",
-    "module": "lib/esm/index.mjs",
-    "types": "lib/types/index.d.ts",
+    "publishConfig": {
+        "access": "public"
+    },
+    "main": "./lib/cjs/index.js",
+    "module": "./lib/esm/index.js",
+    "types": "./lib/types/index.d.ts",
     "exports": {
-        "import": "./lib/esm/index.mjs",
-        "require": "./lib/cjs/index.js"
+        "require": "./lib/cjs/index.js",
+        "import": "./lib/esm/index.js",
+        "types": "./lib/types/index.d.ts"
     },
     "scripts": {
-        "clean": "shx rm -rf lib",
-        "build": "yarn clean && tsc -p tsconfig.json; tsc-esm -p tsconfig.json && tsc -p tsconfig.cjs.json",
-        "postbuild": "echo '{\"type\":\"commonjs\"}' > lib/cjs/package.json && echo '{\"type\":\"module\"}' > lib/esm/package.json",
-        "deploy": "yarn docs && gh-pages --dist docs --dest token/js --dotfiles",
+        "nuke": "shx rm -rf node_modules package-lock.json || true",
+        "reinstall": "npm run nuke && npm install",
+        "clean": "shx rm -rf lib **/*.tsbuildinfo || true",
+        "build": "tsc --build --verbose tsconfig.all.json",
+        "watch": "tsc --build --verbose --watch tsconfig.all.json",
+        "release": "npm run clean && npm run build",
+        "fmt": "prettier --write '{*,**/*}.{ts,tsx,js,jsx,json}'",
+        "lint": "prettier --check '{*,**/*}.{ts,tsx,js,jsx,json}' && eslint --max-warnings 0 .",
+        "lint:fix": "npm run fmt && eslint --fix .",
         "example": "node --experimental-specifier-resolution=node --loader ts-node/esm examples/createMintAndTransferTokens.ts",
-        "test": "yarn test:unit && yarn test:e2e-built && yarn test:e2e-native && yarn test:e2e-2022",
+        "test": "npm run test:unit && npm run test:e2e-built && npm run test:e2e-native && npm run test:e2e-2022",
         "test:unit": "mocha test/unit",
         "test:e2e-built": "start-server-and-test 'solana-test-validator --bpf-program TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA ../../target/deploy/spl_token.so --reset --quiet' http://localhost:8899/health 'mocha test/e2e'",
         "test:e2e-2022": "TEST_PROGRAM_ID=TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb start-server-and-test 'solana-test-validator --bpf-program ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL ../../target/deploy/spl_associated_token_account.so --bpf-program TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb ../../target/deploy/spl_token_2022.so --reset --quiet' http://localhost:8899/health 'mocha test/e2e*'",
         "test:e2e-native": "start-server-and-test 'solana-test-validator --reset --quiet' http://localhost:8899/health 'mocha test/e2e'",
         "test:build-programs": "cargo build-sbf --manifest-path ../program/Cargo.toml && cargo build-sbf --manifest-path ../program-2022/Cargo.toml && cargo build-sbf --manifest-path ../../associated-token-account/program/Cargo.toml",
-        "docs": "shx rm -rf docs && NODE_OPTIONS=--max_old_space_size=4096 typedoc && shx cp .nojekyll docs/",
-        "fmt": "prettier --write '{*,**/*}.{js,ts,jsx,tsx,json}'",
-        "lint": "eslint --max-warnings 0 --ext .ts . && prettier --check '{*,**/*}.{js,ts,jsx,tsx,json}'",
-        "lint:fix": "eslint --fix --ext .ts . && yarn fmt",
-        "nuke": "shx rm -rf node_modules yarn.lock"
+        "deploy": "npm run deploy:docs",
+        "docs": "shx rm -rf docs && typedoc && shx cp .nojekyll docs/",
+        "deploy:docs": "npm run docs && gh-pages --dist token/js --dotfiles"
+    },
+    "peerDependencies": {
+        "@solana/web3.js": "^1.20.0"
     },
     "dependencies": {
         "@solana/buffer-layout": "^4.0.0",
         "@solana/buffer-layout-utils": "^0.2.0",
-        "@solana/web3.js": "^1.41.0"
+        "@solana/spl-memo": "^0.2.0",
+        "buffer": "^6.0.3"
     },
     "devDependencies": {
-        "@solana/spl-memo": "^0.2.0",
+        "@solana/web3.js": "^1.20.0",
         "@types/chai-as-promised": "^7.1.4",
-        "@types/eslint": "^8.4.0",
-        "@types/eslint-plugin-prettier": "^3.1.0",
+        "@types/chai": "^4.3.3",
         "@types/mocha": "^9.1.0",
-        "@types/node": "^16.11.21",
-        "@types/prettier": "^2.4.3",
-        "@typescript-eslint/eslint-plugin": "^5.10.0",
-        "@typescript-eslint/parser": "^5.10.0",
-        "chai": "^4.3.4",
+        "@types/node": "^18.7.9",
+        "@types/node-fetch": "^2.6.2",
+        "@types/prettier": "^2.7.0",
+        "@typescript-eslint/eslint-plugin": "^5.34.0",
+        "@typescript-eslint/parser": "^5.34.0",
+        "chai": "^4.3.6",
         "chai-as-promised": "^7.1.1",
-        "eslint": "^8.7.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-prettier": "^4.0.0",
+        "eslint": "^8.20.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
         "gh-pages": "^3.2.3",
         "mocha": "^9.1.4",
-        "prettier": "^2.5.1",
+        "prettier": "^2.7.1",
+        "process": "^0.11.10",
         "shx": "^0.3.4",
         "start-server-and-test": "^1.14.0",
-        "ts-node": "^10.4.0",
         "tslib": "^2.3.1",
-        "typedoc": "^0.22.11",
-        "typescript": "^4.5.5",
-        "typescript-esm": "^2.0.0"
+        "ts-node": "^10.9.1",
+        "typedoc": "^0.23.10",
+        "typescript": "^4.7.4"
     }
 }
