--- a/memo/js/package.json
+++ b/memo/js/package.json
@@ -42,7 +42,7 @@
         "test:e2e": "start-server-and-test 'solana-test-validator -r -q' http://localhost:8899/health 'jest test/e2e'",
         "deploy": "npm run deploy:docs",
         "docs": "shx rm -rf docs && typedoc && shx cp .nojekyll docs/",
-        "deploy:docs": "npm run docs && gh-pages --dist memo/ts --dotfiles"
+        "deploy:docs": "npm run docs && gh-pages --dist memo/js --dotfiles"
     },
     "peerDependencies": {
         "@solana/web3.js": "^1.20.0"
