--- a/memo/js/package.json
+++ b/memo/js/package.json
@@ -63,6 +63,7 @@
         "eslint": "^8.20.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "gh-pages": "^3.2.3",
         "jest": "^28.1.3",
         "prettier": "^2.7.1",
         "process": "^0.11.10",
