--- a/.github/workflows/pull-request-token.yml
+++ b/.github/workflows/pull-request-token.yml
@@ -130,8 +130,8 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
       - uses: actions/cache@v2
         with:
-          path: ~/.cache/yarn
-          key: node-${{ hashFiles('token/js/yarn.lock') }}
+          path: ~/.npm
+          key: node-${{ hashFiles('token/js/package-lock.json') }}
           restore-keys: |
             node-
       - name: Download programs
