--- a/token/js/package.json
+++ b/token/js/package.json
@@ -73,6 +73,7 @@
         "eslint": "^8.20.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-require-extensions": "^0.1.1",
         "gh-pages": "^3.2.3",
         "mocha": "^9.1.4",
         "prettier": "^2.7.1",
