AC: SDK can be imported into test

--- a/account-compression/sdk/tsconfig.base.json
+++ b/account-compression/sdk/tsconfig.base.json
@@ -1,5 +1,7 @@
 {
-  "include": ["./src/**/*", "index.ts"],
+  "include": [
+    "./src/**/*",
+  ],
   "compilerOptions": {
     "sourceMap": true,
     "declaration": true,
