--- a/account-compression/sdk/tsconfig.json
+++ b/account-compression/sdk/tsconfig.json
@@ -4,6 +4,7 @@
     "moduleResolution": "node",
     "module": "es2022",
     "target": "es2019",
-    "outDir": "dist/esm/"
+    "outDir": "dist/esm/",
+    "rootDir": "./src"
   }
 }
