--- a/account-compression/sdk/package.json
+++ b/account-compression/sdk/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@solana/account-compresion",
+  "name": "@solana/account-compression",
   "version": "0.0.1",
   "description": "SDK for the Solana Labs Account Compression program",
   "repository": {
@@ -33,7 +33,7 @@
     "@types/mocha": "^9.0.0",
     "mocha": "^9.0.3",
     "ts-mocha": "^10.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "=4.7.4"
   },
   "files": [
     "dist"
