--- a/account-compression/sdk/package.json
+++ b/account-compression/sdk/package.json
@@ -1,10 +1,15 @@
 {
   "name": "@solana/account-compression",
   "version": "0.0.1",
-  "description": "SDK for the Solana Labs Account Compression program",
+  "description": "SPL Compression Program JS API",
+  "author": "Solana Maintainers <maintainers@solana.foundation>",
   "repository": {
     "url": "https://github.com/solana-labs/solana-program-library",
     "type": "git"
+  },
+  "sideEffects": false,
+  "engines": {
+    "node": ">=16"
   },
   "license": "MIT",
   "main": "./dist/cjs/index.js",
@@ -18,22 +23,35 @@
     }
   },
   "scripts": {
-    "build": "rm -rf dist/ && tsc && tsc -p tsconfig.cjs.json"
+    "build": "rm -rf dist/ && tsc && tsc -p tsconfig.cjs.json",
+    "start-validator": "solana-test-validator --reset --quiet --bpf-program GRoLLzvxpxxu2PGNJMMeZPyMxjAUH9pKqxGXV9DGiceU ../target/deploy/spl_compression.so --bpf-program WRAPYChf58WFCnyjXKJHtrPgzKXgHp6MD9aVDqJBbGh ../target/deploy/wrapper.so",
+    "run-tests": "jest tests --detectOpenHandles",
+    "test": "start-server-and-test start-validator http://localhost:8899/health run-tests"
   },
   "dependencies": {
     "@solana/web3.js": "^1.50.1",
-    "bn.js": "^5.2.1",
     "borsh": "^0.7.0",
     "chai": "^4.3.4"
   },
   "devDependencies": {
     "@metaplex-foundation/rustbin": "^0.3.1",
     "@metaplex-foundation/solita": "^0.12.2",
+    "@project-serum/anchor": "^0.25.0",
+    "@types/bn.js": "^5.1.1",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
+    "bn.js": "^5.2.1",
+    "jest": "^29.0.1",
+    "jest-config": "^29.0.1",
+    "js-sha3": "^0.8.0",
     "mocha": "^9.0.3",
+    "start-server-and-test": "^1.14.0",
+    "ts-jest": "^28.0.8",
+    "ts-jest-resolver": "^2.0.0",
     "ts-mocha": "^10.0.0",
-    "typescript": "=4.7.4"
+    "ts-node": "^10.9.1",
+    "typescript": "=4.7.4",
+    "typescript-collections": "^1.3.3"
   },
   "files": [
     "dist"
