--- a/account-compression/sdk/package.json
+++ b/account-compression/sdk/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@solana/account-compression",
-  "version": "0.0.1",
-  "description": "SPL Compression Program JS API",
+  "version": "0.1.0",
+  "description": "SPL Account Compression Program JS API",
   "author": "Solana Maintainers <maintainers@solana.foundation>",
   "repository": {
     "url": "https://github.com/solana-labs/solana-program-library",
@@ -11,7 +11,7 @@
   "engines": {
     "node": ">=16"
   },
-  "license": "MIT",
+  "license": "Apache-2.0",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/cjs/index.d.ts",
@@ -29,9 +29,10 @@
     "test": "start-server-and-test start-validator http://localhost:8899/health run-tests"
   },
   "dependencies": {
-    "@solana/web3.js": "^1.50.1",
-    "borsh": "^0.7.0",
-    "chai": "^4.3.4"
+    "borsh": "^0.7.0"
+  },
+  "peerDependencies": {
+    "@solana/web3.js": "^1.50.1"
   },
   "devDependencies": {
     "@metaplex-foundation/rustbin": "^0.3.1",
@@ -39,16 +40,14 @@
     "@project-serum/anchor": "^0.25.0",
     "@types/bn.js": "^5.1.1",
     "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.0.0",
     "bn.js": "^5.2.1",
+    "chai": "^4.3.4",
     "jest": "^29.0.1",
     "jest-config": "^29.0.1",
     "js-sha3": "^0.8.0",
-    "mocha": "^9.0.3",
     "start-server-and-test": "^1.14.0",
     "ts-jest": "^28.0.8",
     "ts-jest-resolver": "^2.0.0",
-    "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1",
     "typescript": "=4.7.4",
     "typescript-collections": "^1.3.3"
