--- a/token/client/Cargo.toml
+++ b/token/client/Cargo.toml
@@ -9,6 +9,7 @@ version = "0.1.0"
 
 [dependencies]
 async-trait = "0.1"
+solana-cli-output = { version = "=1.11.6", optional = true }
 solana-client = "=1.11.6"
 solana-program-test = "=1.11.6"
 solana-sdk = "=1.11.6"
@@ -18,3 +19,7 @@ spl-associated-token-account = { version = "1.1", path = "../../associated-token
 spl-memo = { version = "3.0.1", path = "../../memo/program", features = ["no-entrypoint"] }
 spl-token-2022 = { version = "0.4", path="../program-2022" }
 thiserror = "1.0"
+
+[features]
+default = ["display"]
+display = ["dep:solana-cli-output"]
