instruction-padding: Add a new program for padding instructions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ members = [
   "governance/test-sdk",
   "governance/tools",
   "governance/chat/program",
+  "instruction-padding/program",
   "libraries/math",
   "libraries/concurrent-merkle-tree",
   "libraries/merkle-tree-reference",
