Added prototype for managed-token program (#3573)
* Added prototype from managed-token program

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ members = [
   "libraries/merkle-tree-reference",
   "memo/program",
   "name-service/program",
+  "managed-token/program",
   "record/program",
   "shared-memory/program",
   "stake-pool/cli",
