--- a/account-compression/sdk/package.json
+++ b/account-compression/sdk/package.json
@@ -37,7 +37,9 @@
     "start-validator": "solana-test-validator --reset --quiet --bpf-program cmtDvXumGCrqC1Age74AVPhSRVXJMd8PJS91L8KbNCK ../target/deploy/spl_account_compression.so --bpf-program noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV ../target/deploy/spl_noop.so",
     "run-tests": "jest tests --detectOpenHandles",
     "run-tests:events": "jest tests/events --detectOpenHandles",
+    "run-tests:accounts": "jest tests/accounts --detectOpenHandles",
     "test:events": "start-server-and-test start-validator http://localhost:8899/health run-tests:events",
+    "test:accounts": "start-server-and-test start-validator http://localhost:8899/health run-tests:accounts",
     "test": "start-server-and-test start-validator http://localhost:8899/health run-tests"
   },
   "dependencies": {
@@ -49,8 +51,8 @@
     "@solana/web3.js": "^1.50.1"
   },
   "devDependencies": {
-    "@metaplex-foundation/beet": "^0.6.1",
-    "@metaplex-foundation/beet-solana": "^0.6.1",
+    "@metaplex-foundation/beet": "^0.7.1",
+    "@metaplex-foundation/beet-solana": "^0.4.0",
     "@metaplex-foundation/rustbin": "^0.3.1",
     "@metaplex-foundation/solita": "0.15.2",
     "@project-serum/anchor": "^0.25.0",
