ac: export merkle-tree docs

--- a/account-compression/sdk/package.json
+++ b/account-compression/sdk/package.json
@@ -40,7 +40,8 @@
     "pretty:fix": "prettier --write '{,{src,test}/**/}*.{j,t}s'",
     "lint": "set -ex; npm run pretty; eslint . --ext .js,.ts",
     "lint:fix": "npm run pretty:fix && eslint . --fix --ext .js,.ts",
-    "doc": "set -ex; typedoc --treatWarningsAsErrors",
+    "docs": "rm -rf docs/ && typedoc --out docs",
+    "deploy:docs": "yarn docs && gh-pages -d docs",
     "start-validator": "solana-test-validator --reset --quiet --bpf-program cmtDvXumGCrqC1Age74AVPhSRVXJMd8PJS91L8KbNCK ../target/deploy/spl_account_compression.so --bpf-program noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV ../target/deploy/spl_noop.so",
     "run-tests": "jest tests --detectOpenHandles",
     "run-tests:events": "jest tests/events --detectOpenHandles",
@@ -76,6 +77,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-mocha": "^10.1.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "gh-pages": "^4.0.0",
     "jest": "^29.0.1",
     "jest-config": "^29.0.1",
     "js-sha3": "^0.8.0",
