--- a/.github/workflows/pull-request-governance.yml
+++ b/.github/workflows/pull-request-governance.yml
@@ -57,4 +57,5 @@ jobs:
           echo "$HOME/.local/share/solana/install/active_release/bin" >> $GITHUB_PATH
 
       - name: Build and test
+        timeout-minutes: 60
         run: ./ci/cargo-test-sbf.sh governance --split-tests
