fix: cleanup space on build machine

--- a/.github/workflows/pull-request-governance.yml
+++ b/.github/workflows/pull-request-governance.yml
@@ -17,6 +17,13 @@ jobs:
   cargo-test-sbf:
     runs-on: ubuntu-latest
     steps:
+      - name: Clean up space on runner machine
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc
+          sudo rm -rf "/usr/local/share/boost"
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+
       - uses: actions/checkout@v2
 
       - name: Set env vars
