Governance: Cleanup drive space before executing build (#3818)
* fix: split execution of spl-governance tests

* chore: test governance pull request action

* fix: increase tests timeout

* wip: test_cast_council_veto_vote

* Revert "wip: test_cast_council_veto_vote"

This reverts commit 3678eb867826bbd43292929598daa5cb84bcff17.

* fix: split use_veto_vote

* chore: display disk space between tests runs

* fix: cleanup space on build machine

* chore: remove Android from runner

* Revert "fix: split use_veto_vote"

This reverts commit 197cd02483f1e79b5b8a94b94489162f16b04c92.

* wip: disable test split

* chore: revert test-sbf changes

--- a/.github/workflows/pull-request-governance.yml
+++ b/.github/workflows/pull-request-governance.yml
@@ -3,20 +3,30 @@ name: Governance Pull Request
 on:
   pull_request:
     paths:
-    - 'governance/**'
-    - 'token/**'
-    - 'ci/*-version.sh'
+      - "governance/**"
+      - "token/**"
+      - "ci/*-version.sh"
   push:
     branches: [master]
     paths:
-    - 'governance/**'
-    - 'token/**'
-    - 'ci/*-version.sh'
+      - "governance/**"
+      - "token/**"
+      - "ci/*-version.sh"
 
 jobs:
   cargo-test-sbf:
     runs-on: ubuntu-latest
     steps:
+      - name: Clean up space on runner machine
+        # Workaround to provide additional free space for testing.
+        #   https://github.com/actions/virtual-environments/issues/2840
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          sudo rm -rf "/usr/local/share/boost"
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+
       - uses: actions/checkout@v2
 
       - name: Set env vars
@@ -57,4 +67,5 @@ jobs:
           echo "$HOME/.local/share/solana/install/active_release/bin" >> $GITHUB_PATH
 
       - name: Build and test
+        timeout-minutes: 60
         run: ./ci/cargo-test-sbf.sh governance
