single-validator: Add interface and starter docs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ members = [
   "managed-token/program",
   "record/program",
   "shared-memory/program",
+  "single-validator-manager/program",
   "stake-pool/cli",
   "stake-pool/program",
   "stateless-asks/program",
