--- a/stake-pool/js/tsconfig.json
+++ b/stake-pool/js/tsconfig.json
@@ -16,7 +16,5 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true
   },
-  "include": [
-    "src/**/*.ts"
-  ]
+  "include": ["src/**/*.ts"]
 }
