--- a/stake-pool/js/tsconfig.json
+++ b/stake-pool/js/tsconfig.json
@@ -6,6 +6,7 @@
     "outDir": "dist",
     "declaration": true,
     "declarationDir": "dist",
+    "emitDeclarationOnly": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
