implement single-validator stake pool

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ members = [
   "record/program",
   "shared-memory/program",
   "stake-pool/cli",
+  "stake-pool/single-pool",
   "stake-pool/program",
   "stateless-asks/program",
   "token-lending/cli",
