--- a/docs/package.json
+++ b/docs/package.json
@@ -13,9 +13,9 @@
     "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-alpha.73",
-    "@docusaurus/preset-classic": "^2.0.0-alpha.73",
-    "@docusaurus/theme-search-algolia": "^2.0.0-alpha.73",
+    "@docusaurus/core": "^2.2.0",
+    "@docusaurus/preset-classic": "^2.2.0",
+    "@docusaurus/theme-search-algolia": "^2.2.0",
     "autocomplete.js": "^0.38.1",
     "babel-eslint": "^10.1.0",
     "clsx": "^1.1.1",
