--- a/name-service/js/package.json
+++ b/name-service/js/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.4",
   "description": "SPL Name Service JavaScript API",
   "license": "MIT",
-  "author": "Solana Maintainers <maintainers@solana.foundation>",
+  "author": "Solana Labs Maintainers <maintainers@solanalabs.com>",
   "homepage": "https://solana.com/",
   "repository": {
     "type": "git",
