--- a/token-swap/js/package.json
+++ b/token-swap/js/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.1",
   "description": "SPL Token Swap JavaScript API",
   "license": "MIT",
-  "author": "Solana Maintainers <maintainers@solana.foundation>",
+  "author": "Solana Labs Maintainers <maintainers@solanalabs.com>",
   "homepage": "https://solana.com/",
   "repository": {
     "type": "git",
