--- a/farms/farm-client/Cargo.toml
+++ b/farms/farm-client/Cargo.toml
@@ -2,7 +2,7 @@
 name = "solana-farm-client"
 version = "1.1.3"
 description = "Solana Farm Client"
-authors = ["Solana Maintainers <maintainers@solana.foundation>"]
+authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
 repository = "https://github.com/solana-labs/solana-program-library/farms"
 license = "Apache-2.0"
 homepage = "https://solana.com/"
