--- a/farms/fund/Cargo.toml
+++ b/farms/fund/Cargo.toml
@@ -2,7 +2,7 @@
 name = "solana-fund"
 version = "1.1.3"
 description = "Solana Yield Farming Fund"
-authors = ["Solana Maintainers <maintainers@solana.foundation>"]
+authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
 repository = "https://github.com/solana-labs/solana-program-library/farms"
 license = "Apache-2.0"
 homepage = "https://solana.com/"
