--- a/farms/router-main/Cargo.toml
+++ b/farms/router-main/Cargo.toml
@@ -2,7 +2,7 @@
 name = "solana-router-main"
 version = "1.1.3"
 description = "Solana Farm Main Router"
-authors = ["Solana Maintainers <maintainers@solana.foundation>"]
+authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
 repository = "https://github.com/solana-labs/solana-program-library/farms"
 license = "Apache-2.0"
 homepage = "https://solana.com/"
