--- a/governance/program/Cargo.toml
+++ b/governance/program/Cargo.toml
@@ -2,7 +2,7 @@
 name = "spl-governance"
 version = "3.1.0"
 description = "Solana Program Library Governance Program"
-authors = ["Solana Maintainers <maintainers@solana.foundation>"]
+authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
 repository = "https://github.com/solana-labs/solana-program-library"
 license = "Apache-2.0"
 edition = "2021"
