--- a/libraries/math/Cargo.toml
+++ b/libraries/math/Cargo.toml
@@ -2,7 +2,7 @@
 name = "spl-math"
 version = "0.1.0"
 description = "Solana Program Library Math"
-authors = ["Solana Maintainers <maintainers@solana.foundation>"]
+authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
 repository = "https://github.com/solana-labs/solana-program-library"
 license = "Apache-2.0"
 edition = "2021"
