--- a/token-lending/program/Cargo.toml
+++ b/token-lending/program/Cargo.toml
@@ -2,7 +2,7 @@
 name = "spl-token-lending"
 version = "0.2.0"
 description = "Solana Program Library Token Lending"
-authors = ["Solana Maintainers <maintainers@solana.foundation>"]
+authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
 repository = "https://github.com/solana-labs/solana-program-library"
 license = "Apache-2.0"
 edition = "2021"
