--- a/token/js/package.json
+++ b/token/js/package.json
@@ -2,7 +2,7 @@
     "name": "@solana/spl-token",
     "description": "SPL Token Program JS API",
     "version": "0.3.7",
-    "author": "Solana Maintainers <maintainers@solana.foundation>",
+    "author": "Solana Labs Maintainers <maintainers@solanalabs.com>",
     "repository": "https://github.com/solana-labs/solana-program-library",
     "license": "Apache-2.0",
     "type": "module",
