--- a/token/program-2022/Cargo.toml
+++ b/token/program-2022/Cargo.toml
@@ -2,7 +2,7 @@
 name = "spl-token-2022"
 version = "0.5.0"
 description = "Solana Program Library Token 2022"
-authors = ["Solana Maintainers <maintainers@solana.foundation>"]
+authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
 repository = "https://github.com/solana-labs/solana-program-library"
 license = "Apache-2.0"
 edition = "2021"
