--- a/utils/cgen/Cargo.toml
+++ b/utils/cgen/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cgen"
 version = "0.1.0"
-authors = ["Solana Maintainers <maintainers@solana.foundation>"]
+authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
 publish = false
 edition = "2021"
 
