account-resolution: Add state interface library for additional accounts

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ members = [
   "governance/tools",
   "governance/chat/program",
   "instruction-padding/program",
+  "libraries/account-resolution",
   "libraries/math",
   "libraries/concurrent-merkle-tree",
   "libraries/merkle-tree-reference",
