token-swap-js: Upgrade to @solana/spl-token dependency

--- a/token-swap/js/tsconfig.json
+++ b/token-swap/js/tsconfig.json
@@ -17,5 +17,5 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true
   },
-  "include": ["./src/**/*"]
+  "include": ["./src/**/*", ".eslintrc.js"]
 }
