address Jon's naming comments

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ members = [
   "libraries/math",
   "libraries/concurrent-merkle-tree",
   "libraries/merkle-tree-reference",
-  "libraries/program-error-derive",
+  "libraries/program-error",
   "libraries/tlv-account-resolution",
   "libraries/type-length-value",
   "memo/program",
