--- a/libraries/program-error/Cargo.toml
+++ b/libraries/program-error/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "solana-program-error-derive"
+name = "spl-program-error"
 version = "0.1.0"
-description = "Solana Program Library Program Error Derive"
+description = "Library for Solana Program error attributes and derive macro for creating them"
 authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
 repository = "https://github.com/solana-labs/solana-program-library"
 license = "Apache-2.0"
@@ -11,8 +11,8 @@ edition = "2021"
 num-derive = "0.3.3"
 num-traits = "0.2.15"
 solana-program = "1.14.12"
-solana-program-error-derive-impl = { version = "0.1.0", path = "./derive" }
-thiserror = "1.0.40"
+spl-program-error-derive = { version = "0.1.0", path = "./derive" }
+thiserror = "1.0.32"
 
 [lib]
 crate-type = ["cdylib", "lib"]
