--- a/.github/workflows/pull-request-single-pool.yml
+++ b/.github/workflows/pull-request-single-pool.yml
@@ -5,13 +5,17 @@ on:
     paths:
     - 'stake-pool/single-pool/**'
     - 'token/**'
+    - 'associated-token-account/**'
     - 'ci/*-version.sh'
+    - '.github/workflows/pull-request-single-pool.yml'
   push:
     branches: [master]
     paths:
     - 'stake-pool/single-pool/**'
     - 'token/**'
+    - 'associated-token-account/**'
     - 'ci/*-version.sh'
+    - '.github/workflows/pull-request-single-pool.yml'
 
 jobs:
   cargo-test-sbf:
@@ -65,3 +69,50 @@ jobs:
           name: single-pool-programs
           path: "target/deploy/*.so"
           if-no-files-found: error
+
+  cargo-build-test-cli:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set env vars
+        run: |
+          source ci/rust-version.sh
+          echo "RUST_STABLE=$rust_stable" >> $GITHUB_ENV
+          source ci/solana-version.sh
+          echo "SOLANA_VERSION=$solana_version" >> $GITHUB_ENV
+
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: ${{ env.RUST_STABLE }}
+          override: true
+          profile: minimal
+
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+          key: cargo-build-${{ hashFiles('**/Cargo.lock') }}-${{ env.RUST_STABLE }}
+
+      - uses: actions/cache@v2
+        with:
+          path: ~/.cache/solana
+          key: solana-${{ env.SOLANA_VERSION }}
+
+      - name: Install dependencies
+        run: |
+          ./ci/install-build-deps.sh
+          ./ci/install-program-deps.sh
+          echo "$HOME/.local/share/solana/install/active_release/bin" >> $GITHUB_PATH
+
+      - name: Build dependent programs
+        run: |
+          cargo build-sbf --manifest-path=token/program/Cargo.toml
+          cargo build-sbf --manifest-path=associated-token-account/program/Cargo.toml
+          cargo build-sbf --manifest-path=stake-pool/single-pool/Cargo.toml
+
+      - name: Build and test
+        run: |
+          cargo build --manifest-path ./stake-pool/single-pool-cli/Cargo.toml
+          cargo test --manifest-path ./stake-pool/single-pool-cli/Cargo.toml
