--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,9 @@ members = [
   "governance/tools",
   "governance/chat/program",
   "instruction-padding/program",
-  "libraries/math",
+  "libraries/discriminator",
   "libraries/concurrent-merkle-tree",
+  "libraries/math",
   "libraries/merkle-tree-reference",
   "libraries/program-error",
   "libraries/tlv-account-resolution",
