--- a/libraries/tlv-account-resolution/Cargo.toml
+++ b/libraries/tlv-account-resolution/Cargo.toml
@@ -22,6 +22,7 @@ thiserror = "1.0"
 [dev-dependencies]
 solana-program-test = "1.14.12"
 solana-sdk = "1.14.12"
+spl-discriminator = { version = "0.1", path = "../discriminator" }
 
 [lib]
 crate-type = ["cdylib", "lib"]
