--- a/token-metadata/interface/Cargo.toml
+++ b/token-metadata/interface/Cargo.toml
@@ -12,6 +12,7 @@ borsh = "0.9"
 num-derive = "0.3.3"
 num-traits = "0.2"
 solana-program = "1.14.12"
+spl-discriminator = { version = "0.1.0" , path = "../../libraries/discriminator" }
 spl-program-error = { version = "0.1.0" , path = "../../libraries/program-error" }
 spl-type-length-value = { version = "0.1.0" , path = "../../libraries/type-length-value" }
 thiserror = "1.0"
