remove TLV discrims

--- a/libraries/tlv-account-resolution/Cargo.toml
+++ b/libraries/tlv-account-resolution/Cargo.toml
@@ -16,6 +16,7 @@ num-derive = "0.3"
 num-traits = "0.2"
 num_enum = "0.6.1"
 solana-program = "1.14.12"
+spl-discriminator = { version = "0.1", path = "../discriminator" }
 spl-type-length-value = { version = "0.1", path = "../type-length-value" }
 thiserror = "1.0"
 
