--- a/libraries/tlv-account-resolution/Cargo.toml
+++ b/libraries/tlv-account-resolution/Cargo.toml
@@ -16,12 +16,14 @@ num-derive = "0.3"
 num-traits = "0.2"
 num_enum = "0.6.1"
 solana-program = "1.14.12"
+spl-discriminator = { version = "0.1", path = "../discriminator" }
 spl-type-length-value = { version = "0.1", path = "../type-length-value" }
 thiserror = "1.0"
 
 [dev-dependencies]
 solana-program-test = "1.14.12"
 solana-sdk = "1.14.12"
+spl-discriminator = { version = "0.1", path = "../discriminator" }
 
 [lib]
 crate-type = ["cdylib", "lib"]
