--- a/token-metadata/interface/Cargo.toml
+++ b/token-metadata/interface/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 [dependencies]
 borsh = "0.9"
 solana-program = "1.14.12"
+spl-discriminator = { version = "0.1.0" , path = "../../libraries/discriminator" }
 spl-program-error = { version = "0.1.0" , path = "../../libraries/program-error" }
 spl-type-length-value = { version = "0.1.0" , path = "../../libraries/type-length-value" }
 
